eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 628175736197.dkr.ecr.us-west-1.amazonaws.com/simplebank:0271e6422be862bc10f968ca5f5c877d9d97cdaf
        ports:
        - containerPort: 8080
